--- a/projects/uni-table-demo/src/app/components/client-side-table/client-side-table.component.html
+++ b/projects/uni-table-demo/src/app/components/client-side-table/client-side-table.component.html
@@ -1,42 +1,41 @@
 <div class="my-3">
-    <uni-table 
-        [config]="tableConfig" 
-        [dataConfig]="dataConfig">
+  <uni-table [config]="tableConfig" [dataConfig]="dataConfig">
 
-        <ng-template uniTemplate="actions">
-        <button class="btn btn-primary" (click)="addEntry()">
-            <i class="bi bi-plus-circle"></i> Entry
+    <ng-template uniTemplate="actions">
+      <button class="btn btn-primary" (click)="addEntry()">
+        <i class="bi bi-plus-circle"></i> Entry
+      </button>
+    </ng-template>
+
+    <ng-template uniTemplate="actionTpl" let-row="row">
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-outline-primary me-2" (click)="edit(row)">
+          <i class="bi bi-pencil"></i>
         </button>
-        </ng-template>
+        <button class="btn btn-outline-danger" (click)="delete(row)">
+          <i class="bi bi-trash"></i>
+        </button>
+      </div>
+    </ng-template>
 
-        <ng-template uniTemplate="actionTpl" let-row="row">
-        <div class="btn-group btn-group-sm">
-            <button class="btn btn-outline-primary me-2" (click)="edit(row)">
-            <i class="bi bi-pencil"></i>
-            </button>
-            <button class="btn btn-outline-danger" (click)="delete(row)">
-            <i class="bi bi-trash"></i>
-            </button>
-        </div>
-        </ng-template>
+    <ng-template uniTemplate="salaryTpl" let-value="value">
+      <span class="badge bg-success">{{ value | currency:'USD' }}</span>
+    </ng-template>
 
-        <ng-template uniTemplate="salaryTpl" let-value="value">
-        <span class="badge bg-success">{{ value | currency:'USD' }}</span>
-        </ng-template>
+    <ng-template uniTemplate="menuItems">
+      <li class="dropdown-item">
+        <i class="bi bi-file-earmark-excel me-2"></i>Export to Excel
+      </li>
+      <li class="dropdown-item">
+        <i class="bi bi-filetype-csv me-2"></i>Export to CSV
+      </li>
+      <li>
+        <hr class="dropdown-divider">
+      </li>
+      <li class="dropdown-item">
+        <i class="bi bi-info-circle me-2"></i>About
+      </li>
+    </ng-template>
 
-        <ng-template uniTemplate="menuItems">
-        <li class="dropdown-item">
-            <i class="bi bi-file-earmark-excel me-2"></i>Export to Excel
-        </li>
-        <li class="dropdown-item">
-            <i class="bi bi-file-earmark-csv me-2"></i>Export to CSV
-        </li>
-        <li><hr class="dropdown-divider"></li>
-        <li class="dropdown-item">
-            <i class="bi bi-info-circle me-2"></i>About
-        </li>
-        </ng-template>
-
-    </uni-table>
+  </uni-table>
 </div>
-
