feat(uni-table): add configurable page length options
This commit introduces the ability for users to customize the page length dropdown.

- Adds pageLengthOptions to the UniTableConfig interface.

- The page length dropdown is now dynamically generated from this configuration.

- Provides a default set of options [5, 10, 25, 50, 100] if none are specified.

--- a/projects/uni-table/src/lib/uni-table.component.html
+++ b/projects/uni-table/src/lib/uni-table.component.html
@@ -8,11 +8,9 @@
           <label class="uni-table__page-length-label">
             Show
             <select class="uni-table__page-length-select" [ngModel]="pageSize()" (change)="onPageSizeChange($event)">
-              <option [value]="5">5</option>
-              <option [value]="10">10</option>
-              <option [value]="25">25</option>
-              <option [value]="50">50</option>
-              <option [value]="100">100</option>
+              @for (option of effectivePageLengthOptions(); track option) {
+                <option [value]="option">{{ option }}</option>
+              }
             </select>
             entries
           </label>
